# new-home-mqtt-server

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dashboard.yaml  settings.yaml  shortcuts.yaml  web_settings.yaml
src/: console.rs  main.rs  mime_type_mapper.rs  settings.rs  thread_helper.rs  web_handler.rs
src/services/: dashboard.rs  group.rs  mod.rs  shortcuts.rs  web_settings.rs
systemd/: new-home-mqtt-server.service
