[package]
name = "new-home-mqtt-server"
version = "0.1.0"
authors = ["Yannik <yannik@yannik-sc.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.13"
actix-web = "3.1.0"
actix = "0.10.0"
futures = "0.3.6"
